--- a/ask/templates/poll_done.html
+++ b/ask/templates/poll_done.html
@@ -1,7 +1,8 @@
 {% extends 'base.html' %}
 {% load i18n %}
 {% block container %}
-    {% for poll in unanwered_polls %}
-        {{ poll }}
-    {% endfor %}
+    {{ poll.name }}
+    <h1>Hotovo</h1>
+    <p>Za odpovedi ziskavas {{ poll.reward }} CZK</p>
+    <p><a href="{% url 'home' %}">Domu</a></p>
 {% endblock container %}
