add payouts page

--- a/ask/templates/menu.html
+++ b/ask/templates/menu.html
@@ -13,7 +13,8 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-{#                <li><a href="{% url 'car_add' %}">{% trans 'Přidat' %}</a></li>#}
+                <li><a href="{% url 'home' %}">{% trans 'Home' %}</a></li>
+                <li><a href="{% url 'payouts' %}">{% trans 'Vyplaty' %}</a></li>
 {#                <li><a href="{% url 'my_cars' %}">{% trans 'Moje auta' %}</a></li>#}
 {#                <li><a href="{% url 'my_stared_cars' %}">{% trans 'Moje oblíbená auta' %}</a></li>#}
 {#                <li class="active"><a href="#">Home</a></li>#}
