add settings page, add email, bank account to profile

--- a/ask/templates/login.html
+++ b/ask/templates/login.html
@@ -6,5 +6,5 @@
         {% include 'form.html' %}
         <input type="submit" value="{% trans 'Přihlásit se' %}">
     </form>
-    <p style="margin-top: 10px"><a href="{% url 'password_reset' %}">{% trans 'Obnovit heslo' %}</a></p>
+{#    <p style="margin-top: 10px"><a href="{% url 'password_reset' %}">{% trans 'Obnovit heslo' %}</a></p>#}
 {% endblock container %}
