--- a/ask/templates/base.html
+++ b/ask/templates/base.html
@@ -80,7 +80,7 @@
         {% block container %}
         {% endblock container %}
         <hr>
-        <p>{% now 'Y' %} &copy; <b>ASK</b> | Powered by <a href="http://sikasystems.cz">Sika Systems</a></p>
+        <p>{% now 'Y' %} &copy; <b>ASK</b> | By <a href="https://ondrejsika.com">Ondrej Sika</a></p>
         <script>
             $('[data-widget=datepicker]').datetimepicker({
                 language:  'cs',
